tests/compile-fail/stacked_borrows/mut_exclusive_violation1.stderr
error: Undefined Behavior: attempting a write access using <untagged> at alloc955[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/mut_exclusive_violation1.rs:24:5
   |
LL |     *LEAK = 7; //~ ERROR borrow stack
   |     ^^^^^^^^^
   |     |
   |     attempting a write access using <untagged> at alloc955[0x0], but that tag does not exist in the borrow stack for this location
   |     this error occurs as part of an access at alloc955[0x0..0x4]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `unknown_code_2` at $DIR/mut_exclusive_violation1.rs:24:5
note: inside `demo_mut_advanced_unique` at $DIR/mut_exclusive_violation1.rs:8:3
  --> $DIR/mut_exclusive_violation1.rs:8:3
   |
LL |   unknown_code_2();
   |   ^^^^^^^^^^^^^^^^
note: inside `main` at $DIR/mut_exclusive_violation1.rs:28:5
  --> $DIR/mut_exclusive_violation1.rs:28:5
   |
LL |     demo_mut_advanced_unique(&mut 0);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

